<resources>
    <string name="app_name">Owlish</string>

    <string name="title">Owlish</string>
    <string name="hint_name">name</string>
    <string name="hint_user">username</string>
    <string name="hint_password">password</string>
    <string name="hint_confirm_password">confirm password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_cancel">Cancel</string>
    <string name="register_label">First time using Owlish?</string>
    <string name="login_label">Already have an Owlish account?</string>

    <string name="expense_tab">Expense</string>
    <string name="income_tab">Income</string>

    <string name="menuAccount">Account</string>
    <string name="menuCategory">Category</string>
    <string name="menuReports">Reports</string>
    <string name="menuHelp">Help</string>
    <string name="menuLogout">Logout</string>

    <string name="entry_title">Title</string>
    <string name="entry_amount">Amount</string>
    <string name="entry_desc">Description</string>
    <string name="btn_add">Add</string>
    <string name="btn_reset">Reset</string>
    <string name="categories">Manage Categories</string>


    <string-array name="expense_categories">
        <item>Rent</item>
        <item>Groceries</item>
        <item>Electricity</item>
        <item>Insurance</item>
        <item>Vehicle</item>
        <item>Internet</item>
        <item>Cellphone</item>
        <item>Entertainment</item>
        <item>Travel</item>
        <item>Personal Care</item>
        <item>Charity</item>
        <item>Other</item>
    </string-array>

    <string-array name="income_categories">
        <item>Salary</item>
        <item>Bonus</item>
        <item>Pension</item>
        <item>Gift</item>
        <item>Other</item>
    </string-array>

</resources>
