<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ExpenseFragment">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="307dp"
        android:layout_height="395dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_title"
            app:layout_column="0"
            app:layout_row="0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etExpenseTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_desc"
            app:layout_column="0"
            app:layout_row="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etExpenseDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="5"
                android:minLines="4"
                android:background="@color/background"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_amount"
            app:layout_column="0"
            app:layout_row="2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etExpenseAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expense_date"
            app:layout_column="0"
            app:layout_row="3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etExpenseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Expense Type"
            app:layout_column="0"
            app:layout_row="4">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_expense_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="168dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_ExpenseAdd"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_add"
            app:layout_column="0"
            app:layout_gravity="left"
            app:layout_row="6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_ExpenseReset"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset"
            app:layout_column="0"
            app:layout_gravity="right"
            app:layout_row="6" />

    </androidx.gridlayout.widget.GridLayout>

</FrameLayout>